# sim-music

./: BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml  release-plz.toml
crates/sim-lib-daw-session/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-daw-session/recipes/: book.toml
crates/sim-lib-daw-session/src/: browse.rs  builder.rs  citizen.rs  codec.rs  expr_util.rs  integration.rs  integration_stream.rs  integration_tests.rs  lib.rs  model.rs  prelude.rs  recipe_tests.rs  render.rs  runtime.rs  tests.rs  topology.rs
crates/sim-lib-midi-ble/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-midi-ble/recipes/: book.toml
crates/sim-lib-midi-ble/src/: discovery.rs  lib.rs  model.rs  native.rs  runtime.rs  tests.rs
crates/sim-lib-midi-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-midi-core/recipes/: book.toml
crates/sim-lib-midi-core/src/: cc.rs  error.rs  frame_digest.rs  io.rs  lib.rs  meta_view.rs  model.rs  player.rs  runtime.rs  tempo.rs  tests.rs  wire.rs
crates/sim-lib-midi-live/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-midi-live/recipes/: book.toml
crates/sim-lib-midi-live/src/: error.rs  lib.rs  ring.rs  runtime.rs  session.rs  tests.rs
crates/sim-lib-midi-rtmidi/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-midi-rtmidi/recipes/: book.toml
crates/sim-lib-midi-rtmidi/src/: alsa_provider.rs  backend.rs  fixture.rs  io.rs  lib.rs  model.rs  native.rs  runtime.rs  tests.rs
crates/sim-lib-midi-shapes/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-midi-shapes/recipes/: book.toml
crates/sim-lib-midi-shapes/src/: citizen.rs  codec.rs  lib.rs  runtime.rs  tests.rs
crates/sim-lib-midi-smf/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-midi-smf/recipes/: book.toml
crates/sim-lib-midi-smf/src/: error.rs  lib.rs  model.rs  reader.rs  recipe_tests.rs  tests.rs  vlq.rs  writer.rs
crates/sim-lib-midi-sysex/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-midi-sysex/recipes/: book.toml
crates/sim-lib-midi-sysex/src/: dx7.rs  lib.rs  model.rs  tests.rs
crates/sim-lib-midi-wasm-frame/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-midi-wasm-frame/recipes/: book.toml
crates/sim-lib-midi-wasm-frame/src/: lib.rs  model.rs  tests.rs
crates/sim-lib-music-analysis/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-music-analysis/recipes/: book.toml
crates/sim-lib-music-analysis/src/: lib.rs  model.rs  tests.rs  walsh.rs
crates/sim-lib-music-combinators/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-music-combinators/recipes/: book.toml
crates/sim-lib-music-combinators/src/: arp_lab.rs  arpeggio.rs  bassline.rs  beat_map.rs  builders.rs  drum.rs  euclid.rs  lib.rs  player.rs  polystep.rs  quad_note.rs  recipe_tests.rs  tests.rs
crates/sim-lib-music-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-music-core/recipes/: book.toml
crates/sim-lib-music-core/src/: arranger.rs  arranger_expr.rs  arranger_music_expr.rs  arranger_render.rs  arranger_tests.rs  browse.rs  citizen.rs  descriptor.rs  descriptor_defaults.rs  descriptor_modulators.rs  descriptor_step_players.rs  event.rs  freeze.rs  lane.rs  lib.rs  model.rs  objects.rs  performance.rs  performance_intent.rs  performance_source.rs  performance_take.rs  performance_tests.rs  piano_roll.rs  piano_roll_tests.rs  playable.rs  player.rs  player_chain.rs  player_tests.rs  recipe_tests.rs  registry.rs  registry_tests.rs  tests.rs  time.rs  trace.rs
crates/sim-lib-music-lift/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-music-lift/recipes/: book.toml
crates/sim-lib-music-lift/src/: collect.rs  counterpoint.rs  lib.rs  model.rs  progression.rs  runtime.rs  tests.rs
crates/sim-lib-music-lower/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-music-lower/recipes/: book.toml
crates/sim-lib-music-lower/src/: lib.rs  model.rs  piano_roll.rs  tests.rs
crates/sim-lib-music-notation/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-music-notation/recipes/: book.toml
crates/sim-lib-music-notation/src/: export.rs  import.rs  lib.rs  model.rs  runtime.rs  spell.rs  tests.rs
crates/sim-lib-music-shapes/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-music-shapes/recipes/: book.toml
crates/sim-lib-music-shapes/src/: citizen.rs  codec.rs  lib.rs  runtime.rs  tests.rs
crates/sim-lib-music-synth/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-music-synth/recipes/: book.toml
crates/sim-lib-music-synth/src/: algorithm.rs  backend.rs  builder.rs  citizen.rs  component.rs  cv.rs  dac_float.rs  daw.rs  dsp_fixed.rs  dx7.rs  dx7_envelope.rs  dx7_fixture.rs  dx7_inspection.rs  dx7_lfo.rs  dx7_operator.rs  dx7_patch.rs  dx7_pitch.rs  dx7_scaling.rs  dx7_velocity.rs  editor.rs  egs.rs  envelope.rs  exports.rs  fixture.rs  graph_host.rs  lfo.rs  lib.rs  lut.rs  modeled.rs  modulation.rs  modulator.rs  modules.rs  ops.rs  oscillator.rs  param.rs  patch.rs  poly.rs  port.rs  preset.rs  processor.rs  (+18 more)
crates/sim-lib-music-transform/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-music-transform/recipes/: book.toml
crates/sim-lib-music-transform/src/: arranger.rs  diagnostic.rs  filter.rs  filter_eval.rs  lib.rs  model.rs  mutator.rs  pitch_map.rs  player.rs  remap.rs  tests.rs
crates/sim-lib-music-wasm-frame/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-pitch-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-pitch-dissonance/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-pitch-namer/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-pitch-namer-forte/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-pitch-namer-jazz/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-pitch-namer-riemann/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-pitch-namer-roman/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-pitch-scale/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-pitch-shapes/: BROCHURE.md  Cargo.toml  README.md
xtask/: Cargo.toml  README.md
xtask/src/: check_file_sizes.rs  main.rs  music_fixtures.rs  simdoc.rs
(+571 files in other folders)
