[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Repository maintenance tasks for sim-music validation and generated docs."
readme = "README.md"
publish = false

[dependencies]
sim-lib-music-synth = { path = "../crates/sim-lib-music-synth" }

[lints]
workspace = true
