[package]
name = "sim-lib-midi-core"
version = "0.1.3"
edition = "2024"
license = "MPL-2.0"
description = "Core MIDI event, channel, tick-time, device, and in-memory transport models."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
sim-cookbook = { version = "0.1.3" }
sim-kernel = { version = "0.1.0" }
sim-lib-core = { version = "0.1.0" }
thiserror = "1"

[build-dependencies]
sim-cookbook = { version = "0.1.3" }
