[package]
name = "sim-lib-midi-shapes"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib midi shapes."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
sim-lib-midi-core = { version = "0.1.0", path = "../sim-lib-midi-core" }
sim-lib-midi-smf = { version = "0.1.0", path = "../sim-lib-midi-smf" }
sim-shape = { version = "0.1.0" }
thiserror = "1"

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }
