[package]
name = "sim-lib-midi-smf"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Standard MIDI File reader and writer helpers for deterministic SIM MIDI fixtures."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-lib-midi-core = { version = "0.1.0", path = "../sim-lib-midi-core" }
thiserror = "1"

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
