[package]
name = "sim-lib-music-core"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib music core."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
num-rational = "0.4"
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
sim-lib-midi-core = { version = "0.1.0", path = "../sim-lib-midi-core" }
sim-lib-midi-smf = { version = "0.1.0", path = "../sim-lib-midi-smf" }
sim-lib-pitch-core = { version = "0.1.0", path = "../sim-lib-pitch-core" }
sim-lib-stream-core = { version = "0.1.0" }
sim-lib-topology = { version = "0.1.0" }
thiserror = "1"
