[package]
name = "sim-lib-music-notation"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "LilyPond subset import and export helpers for SIM score and melody objects."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
num-rational = "0.4"
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-core = { version = "0.1.0" }
sim-lib-music-core = { version = "0.1.3", path = "../sim-lib-music-core" }
sim-lib-pitch-core = { version = "0.1.2", path = "../sim-lib-pitch-core" }
thiserror = "1"

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
