[package]
name = "sim-lib-music-synth"
version = "0.1.5"
edition = "2024"
license = "MPL-2.0"
description = "Playable pure Rust software synthesizer primitives for the SIM audio graph."
readme = "README.md"
publish = true
# No published binary targets: the fixture-manifest generators are maintainer codegen
# tools and live in this repo's `xtask` (`cargo run -p xtask -- music-fixtures <name>`),
# not on this crate's installable surface.
autobins = false
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
sim-citizen = { version = "0.1.2" }
sim-citizen-derive = { version = "0.1.3" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-audio-dsp = { version = "0.1.0" }
sim-lib-audio-graph-core = { version = "0.1.0" }
sim-lib-core = { version = "0.1.0" }
sim-lib-midi-core = { version = "0.1.0", path = "../sim-lib-midi-core" }
sim-lib-music-core = { version = "0.1.0", path = "../sim-lib-music-core" }
sim-lib-midi-sysex = { version = "0.1.0", path = "../sim-lib-midi-sysex" }
sim-lib-pitch-core = { version = "0.1.0", path = "../sim-lib-pitch-core" }
sim-lib-stream-core = { version = "0.1.2" }
sim-lib-topology = { version = "0.1.0" }
sim-value = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-codec = { version = "0.1.0" }
sim-codec-json = { version = "0.1.0" }
sim-codec-lisp = { version = "0.1.0" }
sim-lib-audio-graph-live = { version = "0.1.0" }
sim-test-support = { version = "0.1.0" }

[lints]
workspace = true
