[package]
name = "sim-lib-music-transform"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib music transform."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
num-rational = "0.4"
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-music-core = { version = "0.1.0", path = "../sim-lib-music-core" }
sim-lib-pitch-chord = { version = "0.1.0", path = "../sim-lib-pitch-chord" }
sim-lib-pitch-core = { version = "0.1.0", path = "../sim-lib-pitch-core" }
sim-lib-pitch-scale = { version = "0.1.0", path = "../sim-lib-pitch-scale" }
thiserror = "2"

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-lib-midi-core = { version = "0.1.0", path = "../sim-lib-midi-core" }
sim-lib-music-lower = { version = "0.1.0", path = "../sim-lib-music-lower" }
