[package]
name = "sim-lib-pitch-namer-forte"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Forte-number labels and prime-form lookup for pitch-class sets."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-lib-pitch-set = { version = "0.1.0", path = "../sim-lib-pitch-set" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
