[package]
name = "sim-lib-pitch-namer-jazz"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib pitch namer jazz."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
sim-lib-pitch-chord = { version = "0.1.0", path = "../sim-lib-pitch-chord" }
sim-lib-pitch-core = { version = "0.1.0", path = "../sim-lib-pitch-core" }
sim-lib-pitch-set = { version = "0.1.0", path = "../sim-lib-pitch-set" }
thiserror = "1"
