[package]
name = "sim-lib-pitch-namer-jazz"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Jazz chord-symbol labels and quality detection for pitch chords."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-lib-pitch-chord = { version = "0.1.0", path = "../sim-lib-pitch-chord" }
sim-lib-pitch-core = { version = "0.1.0", path = "../sim-lib-pitch-core" }
sim-lib-pitch-set = { version = "0.1.0", path = "../sim-lib-pitch-set" }
thiserror = "1"

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
