[package]
name = "sim-lib-pitch-namer-riemann"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Riemannian harmonic function labels for triads and tonal contexts."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-lib-pitch-core = { version = "0.1.0", path = "../sim-lib-pitch-core" }
sim-lib-pitch-set = { version = "0.1.0", path = "../sim-lib-pitch-set" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
