[package]
name = "sim-lib-pitch-namer-roman"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "Roman-numeral harmonic labels over scale keys and pitch chords."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-lib-pitch-core = { version = "0.1.2", path = "../sim-lib-pitch-core" }
sim-lib-pitch-scale = { version = "0.1.3", path = "../sim-lib-pitch-scale" }
sim-lib-pitch-set = { version = "0.1.2", path = "../sim-lib-pitch-set" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
