[package]
name = "sim-lib-pitch-scale"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "Scale, key, mode, and degree mapping helpers for pitch-domain transforms."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-lib-pitch-core = { version = "0.1.0", path = "../sim-lib-pitch-core" }
sim-lib-pitch-set = { version = "0.1.0", path = "../sim-lib-pitch-set" }
thiserror = "1"

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
