[package]
name = "sim-lib-pitch-shapes"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib pitch shapes."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-music"
homepage = "https://github.com/sim-nest/sim-music"

[dependencies]
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-codec = { version = "0.1.4" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
sim-lib-pitch-chord = { version = "0.1.0", path = "../sim-lib-pitch-chord" }
sim-lib-pitch-core = { version = "0.1.0", path = "../sim-lib-pitch-core" }
sim-lib-pitch-scale = { version = "0.1.0", path = "../sim-lib-pitch-scale" }
sim-lib-pitch-set = { version = "0.1.0", path = "../sim-lib-pitch-set" }
sim-shape = { version = "0.1.0" }
thiserror = "2"

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }
